...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addGroceryItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:context=".views.activities.grocery.AddGroceryItemActivity">

        <com.google.android.material.appbar.MaterialToolbar
...
                android:text="@string/add_grocery_item_name_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_list_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_list_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_grocery_item_name_hint"
                    android:inputType="text"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
...
                android:text="@string/add_grocery_item_type_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_list_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinner_product_type_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_type">

            <AutoCompleteTextView
                    android:id="@+id/spinner_product_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textSize="14sp"
                    app:simpleItems="@array/grocery_item_types"
                    tools:ignore="LabelFor" />
...
                android:text="@string/add_grocery_item_quantity_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_product_type_layout" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_product_quantity_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_quantity">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_grocery_item_quantity_hint"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
...
                android:text="@string/add_grocery_item_units_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_product_quantity_layout" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinner_product_units_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_units">

            <AutoCompleteTextView
                    android:id="@+id/spinner_product_units"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textSize="14sp"
                    app:simpleItems="@array/grocery_item_units"
                    tools:ignore="LabelFor" />
...
                android:text="@string/add_grocery_item_price_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_product_units_layout" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_product_price_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_grocery_item_price_hint"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
...
                android:id="@+id/iv_image_preview"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:contentDescription="@string/add_grocery_item_image_preview"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/btn_add_grocery_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_remove_image"
                app:layout_constraintTop_toBottomOf="@id/et_product_price_layout" />

        <Button
                android:id="@+id/btn_add_grocery_item"
...
