<resources>
    <string name="app_name" translatable="false">CompiComida</string>
    <string name="home_menu">Home</string>
    <string name="recipes_menu">Recetas</string>
    <string name="new_menu">Nuevo</string>
    <string name="pantry_menu">Despensa</string>
    <string name="lists_menu">Listas</string>
    <string name="tv_home_expire_title">Productos que caducarán pronto</string>
    <string name="tv_home_recent_list_title">Tu lista más reciente: %s</string>
    <string name="add_grocery_item_name_title">Nombre</string>
    <string name="add_grocery_item_name_hint">Nombre del producto</string>
    <string name="add_grocery_item_type_title">Tipo</string>
    <string name="add_grocery_item_quantity_title">Cantidad</string>
    <string name="add_grocery_item_quantity_hint">Cantidad del producto</string>
    <string name="add_grocery_item_units_title">Unidades</string>
    <string name="add_grocery_item_price_title">Precio / Unidad</string>
    <string name="add_grocery_item_price_hint">Precio del producto</string>
    <string name="add_grocery_item_image_title">Imagen</string>
    <string name="add_grocery_item_image_button_hint">Seleccionar imagen</string>
    <string name="add_grocery_item_add_button_text">Añadir Producto</string>
    <string name="add_grocery_list_add_button_text">Añadir Lista</string>
    <string name="add_pantry_item_add_button_text">Añadir producto a despensa</string>
    <string name="add_pantry_item_name_title">Nombre</string>
    <string name="add_pantry_item_name_hint">Nombre del producto</string>
    <string name="add_pantry_item_type_title">Tipo</string>
    <string name="add_pantry_item_quantity_title">Cantidad</string>
    <string name="add_pantry_item_quantity_hint">Cantidad del producto</string>
    <string name="add_pantry_item_units_title">Unidades</string>
    <string name="add_pantry_item_expiration_date_title">Fecha de caducidad</string>
    <string name="add_pantry_item_expiration_date_hint">Fecha de caducidad del producto</string>
    <string name="add_pantry_item_image_title">Imagen</string>
    <string name="add_pantry_item_image_button_text">Seleccionar imagen</string>
    <string name="edit_pantry_item_image_button_text">Editar imagen</string>
    <string name="edit_pantry_item_edit_button_text">Confirmar cambios</string>
    <string name="edit_pantry_item_delete_button_text">Eliminar producto</string>
    <string name="searchbar_hint">Búsqueda de productos</string>
    <string name="home_searchbar_hint">Búsqueda de productos</string>
    <string name="content_desc_grocery_list_image">Grocery List Image</string>
    <string name="recycler_grocery_list_name">Lista 1</string>
    <string name="recycler_grocery_list_date_and_products">Creada el %1$s\n%2$d productos</string>
    <string name="grocery_items_adapter_cantidad_text">Cantidad: %1$s %2$s</string>
    <string name="add_grocery_list_title">Crear Lista de la Compra</string>
    <string name="add_grocery_list_name_hint">Nombre de la lista</string>
    <string name="content_desc_grocery_item_image">ListItem</string>
    <string name="error_empty_fields_add_grocery_item">Debe cumplimentar todos los campos</string>
    <string name="error_valid_numbers_add_grocery_item">El precio y la cantidad deben ser números válidos</string>
    <string name="error_valid_numbers_add_pantry_item">La cantidad debe ser un número válido</string>
    <string name="error_valid_expiration_date_add_pantry_item">La fecha de caducidad no puede ser una fecha pasada</string>
    <string name="error_category_not_found_add_grocery_item">Debe proporcionar una categoría para el producto</string>
    <string name="error_expiration_date_not_found_add_pantry_item">Se tiene que seleccionar una fecha de caducidad</string>
    <string name="add_grocery_item_title">Añadir Producto\n</string>
    <string name="add_pantry_item_title">Añadir producto a despensa\n</string>
    <string name="edit_pantry_item_title">Editar producto\n</string>
    <string name="content_desc_recipe_list_item">Go to the details of the recipe.</string>
    <string name="content_description_recipe_image">Imagen receta</string>
    <string name="recipe_list_name">Pollo de Vino peruano</string>

    <string name="fab_recipe_to_shopList_description">Añade los ingredientes de la receta a una nueva lista de la compra.</string>
    <string name="image_recipe_details_description">Imagen de la receta</string>

    <string name="recipe_other_information">%s • %d min • %d persona(s)</string>
    <string name="recipe_ingredient_detail">%s • %s %s</string>
    <string name="recipe_details_dificultad_title">Dificultad:</string>
    <string name="recipes_details_description_title">Descripción</string>
    <string name="recipes_details_description_text">Descripción de la Receta.</string>
    <string name="recipes_details_ingredients_title">Ingredientes</string>

    <string name="grocery_list_confirm_alert_text">Recuerda añadir las fechas de caducidad a los productos en la despensa</string>
    <string name="grocery_list_confirm_alert_title">Alerta</string>

    <string-array name="grocery_item_types">
        <item>Bebida</item>
        <item>Cítrico</item>
        <item>Lácteos</item>
        <item>Legumbre</item>
        <item>Fruta</item>
        <item>Verdura</item>
        <item>Carne</item>
        <item>Pescado</item>
        <item>Marisco</item>
        <item>Fruto seco</item>
        <item>Grano</item>
        <item>Condimento</item>
        <item>Conserva</item>
    </string-array>

    <string-array name="grocery_item_units">
        <item>Unidades</item>
        <item>kg</item>
        <item>g</item>
        <item>L</item>
        <item>cl</item>
    </string-array>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
    <string name="action_settings">Ajustes</string>
    <string name="add_grocery_item_image_preview">Imagen seleccionada para el producto</string>
    <string name="remove_product_image_hint">Quitar Imagen de Producto</string>
    <string name="bought_checkbox">Comprado</string>
    <string name="grocery_item_details_tv_more_info">Más Información</string>
    <string name="quantity_unit">Cantidad: %1$s %2$s</string>
    <string name="price_no_unit">
        Precio: %1$.2f €
    </string>
    <string name="price_per_unit">
        Precio: %1$.2f € / %2$s
    </string>
    <string name="delete_button">Eliminar</string>
    <string name="steps_recipe_title_text">Pasos</string>

    <string name="recipe_description_sneak_peek">%s…</string>
    <string name="expire_items_headline_text">%s • %s %s</string>
    <string name="recent_list_items_headline_text">%s • %s %s</string>

    <string name="recipe_details_add_to_shopping_list_success">Receta añadida a la lista de la compra :)</string>
    <string name="recipe_details_add_to_shopping_list_fail">Lo siento, no hemos podido añadir la receta a una nueva lista de la compra. Inténtelo de nuevo, más tarde.</string>
    <string name="tab_markets_near">Supermercados</string>
    <string name="tab_suggested_recipe">Receta del día</string>
    <string name="tab_expire_items">Próximo a expirar</string>
    <string name="chip_expire_items_all">Todos</string>
    <string name="chip_expire_items_today">Hoy</string>
    <string name="chip_expire_items_tomorrow">Mañana</string>
    <string name="chip_expire_items_2days">Pasado Mañana</string>
    <string name="chip_expire_items_already_expired">Ya caducados</string>
    <string name="tab_markets_near_denied_dialog_title">Permisos de Localización Denegados.</string>
    <string name="tab_markets_near_denied_dialog_message">Lo siento, no podemos mostrarte los supermercados cercanos a ti sin tu permiso. Puedes cambiar esto en la configuración de tu dispositivo.</string>
    <string name="tab_markets_near_denied_dialog_positive_button">Aceptar</string>
    <string name="grocery_item_details_vm_no_cat">Sin Categoría</string>
    <string name="add_grocery_list_vm_error_empty_listName">El nombre de la lista no puede estar vacío.</string>
    <string name="add_grocery_list_vm_error_listAlreadyExists">La lista ya existe.</string>
    <string name="item_default_unit">No especificada</string>
    <string name="grocery_list_last_update">Última actualización el %s</string>
    <string name="grocery_item_details_leading_title">" - Detalles</string>
    <string name="grocery_items_list_item_creation_advice">Recuerda añadir la caducidad al producto en la despensa.</string>
    <string name="edit_pantry_item_success">Producto actualizado con éxito.</string>
    <string name="ingredient_icon_content_description">Icono para el ingrediente: %s</string>
    <string name="expire_on">Venció el %s</string>
    <string name="expire_today">Vence HOY</string>
    <string name="expire_tomorrow">Vence MAÑANA</string>
    <string name="expire_2days">VENCE PASADO MAÑANA</string>
    <string name="pantry_fragment_search_view_hint">Busca en tu despensa…</string>
    <string name="notifications_alert_denied">No se notificará el vencimiento de los productos</string>
    <string name="notifications_alert_allowed">Se notificará el vencimiento de los productos</string>
    <string name="product_notificacion_title">Despensa</string>
    <string name="product_notificacion_body_not_expirated">Tienes productos que caducan en 2 dias o menos</string>
    <string name="product_notificacion_body_expirated">Tienes productos caducados</string>

</resources>